--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /Lab2/nbproject/private/
 /Lab2/build/
 /Lab2/dist/
+/Lab2/JavaApplication2/nbproject/private/
+/JavaApplication3/nbproject/private/
