--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /Lab2/dist/
 /Lab2/JavaApplication2/nbproject/private/
 /JavaApplication3/nbproject/private/
+/Lab2/JavaApplication4/nbproject/private/
